--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "tools",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "escape": "node tasks/escape.js",
+    "links": "node tasks/requestLinks.js"
   },
   "author": "Artur Mihno",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^1.1.3",
     "copy-paste": "^1.3.0"
   }
 }
