--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^1.1.3",
-    "copy-paste": "^1.3.0"
+    "copy-paste": "^1.3.0",
+    "request": "^2.79.0"
   }
 }
